--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.2.6",
     "es6-symbol": "^3.1.1",
+    "file-saver": "^2.0.1",
     "office-ui-fabric-react": "^5.135.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
